# deha

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.ai/features/: README.md
.ai/knowledge/: lessons-learned.md
docs/: architecture.md  client-api.md
docs/contracts/: mcp-server.md  presence.md
docs/howto/: train-wake-word.md
docs/install/: INSTALL-body.md
docs/plans/: deha-narrowing-2026-05-16.md  integration-handoff-2026-05-16.md  voice-performance-2026-05-09.md  voice-roadmap-2026-05-16.md
firmware/: STATUS.md  narada-faces.yaml
firmware/illustrations/narada/: .gitignore  README.md
integrations/homeassistant/narada/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json
scripts/: audition_blends.py  audition_voices.py  embodiment_voice_demo.py  install_narada_supervisor_task.ps1  render_preview.py  voice_pipeline.py  voice_timing.py
src/deha/: __init__.py  proprioception.py
src/deha/cli/: __init__.py  __main__.py
src/deha/expression/: expression.py  rig.py
src/deha/mcp/: __init__.py  server.py
src/deha/mcp/tools/: __init__.py  body.py
src/deha/sensors/: __init__.py  presence.py
src/deha/voice/: brain_server.py  bridge.py  claude_stream.py  kokoro_tts.py  speak_mcp.py  supervisor.py  utter.py  wyoming_tts.py
