[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deha"
version = "0.1.0"
description = "The body — ESP32-S3-BOX-3 firmware, voice brain server, and the deha_client lib for talking to it"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sutirtha Basak", email = "sutirthabasak@gmail.com" },
    { name = "Narada", email = "narada@fractal.co.nz" },
]
keywords = ["esp32", "voice", "embodiment", "narada", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "aiohttp>=3.9",
    "requests>=2.31",
    "pyyaml>=6.0",
    "aioesphomeapi>=24.0",
    "numpy>=1.26",
    "psutil>=5.9",
]

[project.optional-dependencies]
voice = [
    # Voice / TTS / Wyoming dependencies. Brain server + supervisor
    # bring these in; the deha_client lib does not.
    "wyoming>=1.5",
    "kokoro-onnx>=0.4",
    "onnxruntime>=1.18",
]
voice-gpu = [
    # Substitute for `voice` when the host has CUDA. Pull this instead of
    # `voice` to land Win #2 of the perf plan (Kokoro on the 3090).
    # Notes:
    # - onnxruntime-gpu 1.26 requires cuDNN 9.x and CUDA 12.x. The
    #   nvidia-cudnn-cu12 package ships the cuDNN DLLs into
    #   site-packages/nvidia/cudnn/bin/; deha.voice.kokoro_tts prepends
    #   that to PATH at load time so onnxruntime can find them.
    # - The CUDA toolkit itself (nvcc, driver) is NOT a pip dep — it
    #   must be installed system-wide. Driver >=525 + CUDA 12.x is
    #   required.
    "wyoming>=1.5",
    "kokoro-onnx>=0.4",
    "onnxruntime-gpu>=1.18",
    "nvidia-cudnn-cu12>=9.0,<10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/Stormbane/deha"
Issues = "https://github.com/Stormbane/deha/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
